# fluid-wallpaper

./: .gitignore  LICENSE  README.md
installer/: fluid-wallpaper.iss
prototype/: requirements.txt  stable_fluids.py
wallpaper/: CMakeLists.txt
wallpaper/resources/: _gen_icons.py  app.rc  resource.h
wallpaper/src/: cuda_renderer.cu  cuda_renderer.h  fluid_sim.cu  fluid_sim.h  input.cpp  input.h  main.cpp  power.cpp  power.h  renderer.cpp  renderer.h  tray.cpp  tray.h  wallpaper.cpp  wallpaper.h
wallpaper/src/shaders/: animated.hlsl
